Added PhotorestService and switch API file upload to multipart request
