# photostorybook-api/photostorybook-api-spec.yaml
@@ -121,10 +121,13 @@ paths:
         description: Photo image file in PNG format
         required: true
         content:
-          image/jpeg:
+          multipart/form-data:
             schema:
-              type: string
-              format: binary
+              type: object
+              properties:
+                titleImage:
+                  type: string
+                  format: binary
       responses:
         201:
           description: Successfully upload a photo.
